// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicKey With public key Renders the component 1`] = `
<fragment-stub>
  <div class="d-flex pa-0 align-center">
    <h1>Public Keys</h1>
    <v-spacer-stub tag="div"></v-spacer-stub>
    <v-spacer-stub tag="div"></v-spacer-stub> <span><publickeycreate-stub keyobject="[object Object]" createkey="true" action="public" data-test="publicKeyCreate-component"></publickeycreate-stub></span>
  </div>
  <v-card-stub loaderheight="4" tag="div" class="mt-2">
    <router-view-stub name="default"></router-view-stub>
    <!---->
  </v-card-stub>
</fragment-stub>
`;

exports[`PublicKey Without public key Renders the component 1`] = `
<fragment-stub>
  <div class="d-flex pa-0 align-center">
    <h1>Public Keys</h1>
    <v-spacer-stub tag="div"></v-spacer-stub>
    <v-spacer-stub tag="div"></v-spacer-stub> <span><publickeycreate-stub keyobject="[object Object]" createkey="true" action="public" data-test="publicKeyCreate-component"></publickeycreate-stub></span>
  </div>
  <v-card-stub loaderheight="4" tag="div" class="mt-2">
    <!---->
    <boxmessagepublickey-stub typemessage="publicKey" data-test="boxMessagePublicKey-component"></boxmessagepublickey-stub>
  </v-card-stub>
</fragment-stub>
`;
